RavenDB-16685 Ongoing Stats Graph + Index Performance Graph : Fix missing color for 'axisText'

--- a/src/Raven.Studio/wwwroot/Content/css/pages/metrics.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/metrics.less
@@ -42,8 +42,9 @@ rect.pane {
     
     .color-definitions {
         .axis {
-            color: @layout-border;
+            color: fadeout(@text-color, 30%);
         }
+
         .axisText {
             color: @on-base-background-color;
         }
